--- a/templates/alojamientos.html
+++ b/templates/alojamientos.html
@@ -6,23 +6,24 @@
 {% block content %}
 
     <!-- PAGE TITLE SMALL -->
-    <div class="wed_page_title wed_page_title_great wed_image_bck wed_fixed wed_wht_txt" data-stellar-background-ratio="0.2" data-image="{% static 'images/fashion_couple/slider1.jpg' %}">
+    <div class="wed_page_title wed_page_title_great wed_image_bck wed_fixed wed_wht_txt"
+         data-stellar-background-ratio="0.2" data-image="{% static 'images/croacia2.jpg' %}">
 
 
-      <!-- Over -->
-      <div class="wed_over" data-color="#8630fc" data-opacity="0.9"></div>
-      <div class="wed_over" data-color="#000" data-opacity="0.1"></div>
+        <!-- Over -->
+        <div class="wed_over" data-color="#8630fc" data-opacity="0.8"></div>
+        <div class="wed_over" data-color="#000" data-opacity="0.1"></div>
 
-      <div class="container text-left">
-        <div class="row">
-          
-          <div class="col-md-8">
-            <h1 class="wed_h1_title">Alojamientos</h1>
-            <h3>Hoteles en Pontevedra</h3>
-          </div>
+        <div class="container text-left">
+            <div class="row">
 
+                <div class="col-md-8">
+                    <h1 class="wed_h1_title">Alojamientos</h1>
+                    <h3>Hoteles en Pontevedra</h3>
+                </div>
+
+            </div>
         </div>
-      </div>
     </div>
 
     <!-- PAGE TITLE SMALL END-->
@@ -30,84 +31,119 @@
     <!-- Content -->
     <section id="wed_content" class="wed_content">
 
-      <!-- section -->
+        <!-- section -->
         <section class="wed_section_innerpage">
 
-        <div class="container text-left">
-          <!-- Item -->
-          <div class="row wed_row_padding">
-            <div class="col-md-offset-1 col-md-5">
-              <div>
-                <h3>Hotel Rúas</h3>
-                <span>Rúa Sarmiento, 20<br><br></span>
+            <div class="container text-left">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin 
-                </p> 
-              </div>                      
-            </div>
-
-            <div class="col-md-5">
-              <img src="{% static 'images/buildings/hotel.jpg' %}" class="fullwidth" alt="">
-            </div>
-          </div>
-          <!-- Row End -->
-
-          <!-- Item -->
-          <div class="row wed_row_padding">
-            <div class="col-md-offset-1 col-md-5">
-              <div>
-                <h3>Hotel Galicia Palace</h3>
-                <span>Avenue Paducah 1285 7th street<br><br></span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin 
-                </p> 
-              </div>                      
-            </div>
-
-            <div class="col-md-5 no-padding">
-              <img src="{% static 'images/galicia-palace.jpg' %}" class="fullwidth" alt="">
-            </div>
-          </div>
-          <!-- Row End -->
-
-          <!-- Item -->
-          <div class="row wed_row_padding">
-            <div class="col-md-offset-1 col-md-5">
-              <div>
-                <h3>Hotel Rías Baixas</h3>
-                <span>Avenue Paducah 1285 7th street<br><br></span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin 
-                </p> 
-              </div>                      
-            </div>
-
-            <div class="col-md-5">
-              <img src="{% static 'images/buildings/restaurant.jpg' %}" class="fullwidth" alt="">
-            </div>
-          </div>
-          <!-- Row End -->
-
-          <!-- Item -->
-          <div class="row wed_row_padding">
-            <div class="col-md-offset-1 col-md-5">
-              <div>
-                <h3>Parador de Pontevedra</h3>
-                <span>Avenue Paducah 1285 7th street<br><br></span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin
+                    Nuestra recomendación es que os hospedéis en Pontevedra puesto que será aquí donde nos reuniremos
+                    para la preboda el viernes 21 de agosto.
+                    Además, el servicio conectará al día siguiente el centro de Pontevedra (Plaza de Galicia) con el
+                    Pazo da Touza.
                 </p>
-              </div>
-            </div>
+                <p>A continuación, te mostramos una
+                    breve selección de algunos de los hoteles que puedes encontrar en Pontevedra. Tampoco olvides la
+                    plataforma <a href="https://www.airbnb.es/s/Pontevedra--Spain" target="_blank">Airbnb</a>.
+                </p>
+                <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-7">
+                        <div>
+                            <h3><a href="https://www.parador.es/es/paradores/parador-de-pontevedra"> Parador de
+                                Pontevedra</a></h3>
+                            <span>Rúa do Barón, 19, 36002 Pontevedra<br><br></span>
+                        </div>
+                    </div>
 
-            <div class="col-md-5">
-              <img src="{% static 'images/buildings/restaurant.jpg' %}" class="fullwidth" alt="">
-            </div>
-          </div>
-          <!-- Row End -->
+                    <div class="col-md-4">
+                        <img src="{% static 'images/parador.jpg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
 
-          </div>
-          <!-- container end -->
+                <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-5">
+                        <div>
+                            <h3><a href="http://www.hotelruas.net/index.php?lang=es"> Hotel Rúas</a></h3>
+                            <span>Rúa Sarmiento, 20, 36002 Pontevedra<br><br></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <img src="{% static 'images/ruas.jpg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
+
+                <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-5">
+                        <div>
+                            <h3><a href="https://www.galiciapalace.com/"> Hotel Galicia Palace</a></h3>
+                            <span>Av. de Vigo, 3, 36003 Pontevedra<br><br></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 no-padding">
+                        <img src="{% static 'images/galicia-palace.jpg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
+
+                <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-5">
+                        <div>
+                            <h3><a href="https://www.hotelriasbajas.com/es/"> Hotel Rías Bajas</a></h3>
+                            <span>Rúa Daniel de la Sota Valdecilla, 7, 36001 Pontevedra<br><br></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <img src="{% static 'images/hotel-rias-bajas.jpg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
+
+                <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-5">
+                        <div>
+                            <h3><a href="https://www.hotelroompontevedra.com/"> Hotel Room</a></h3>
+                            <span>Rúa Profesor Filgueira Valverde, 10, 36004 Pontevedra<br><br></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <img src="{% static 'images/hotel_room.jpg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
+
+                <p>
+                    Otros:
+                </p>
+                <p>
+                    A pesar de que nuestro consejo es quedarte en Pontevedra, si finalmente eliges la costa de Vigo te dejamos una lista con hoteles que puedes encontrar por la zona:
+                </p>
+
+                <div class="row">
+                    Baiona
+€€€: Parador de Baiona
+€€: Pazo de Mendoza
+€€: Hotel Bahia Baiona
+€: Hostal Santa Marta
+
+Playa América
+€€: Hotel Miramar
+
+Nigrán
+€€: Hotel Val Conventión
+€: Pensión Venus – El Retiro
+                </div>
+            </div>
+            <!-- container end -->
 
 
         </section>
@@ -115,6 +151,6 @@
 
     </section>
     <!-- section end -->
-  
+
 
 {% endblock %}
