--- a/templates/index.html
+++ b/templates/index.html
@@ -32,55 +32,70 @@
     <!-- Content -->
     <section id="wed_content" class="wed_content">
 
-
         <!-- BORDER -->
         <div class="wed_slider_border">
 
-            <!-- story section -->
-            <section id="story" class="wed_section_outter wed_couple_frame clearfix">
 
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-offset-2 col-md-8 text-center">
-                            <div class="wed_topstory_titile wed_great_titles">
-                                <h2 class="wed_margtop">
-                                    Happy Couple
-                                </h2>
-                            </div>
-                        </div>
+        <!-- start story-section -->
+        <section class="story-section section-padding p-t-0">
+            <div class="container">
+                <div class="row wed_middle_titles text-center">
+                    <div class="col col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 mb-5">
+                            <h2>Un largo camino</h2>
+                            <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat</p>
                     </div>
-                    <!-- Row end -->
-                    <div class="row">
-                        <!-- Item -->
-                        <div class="col-md-5 col-sm-5 col-xs-12 col-md-offset-1 col-sm-pull-1">
-                            <div class="wed_wrapper_frame">
-                                <div class="wed_heart_img_1 skrollable skrollable-after" data-bottom="left:10%"
-                                     data-center="left:0" data-image="images/fashion_couple/about_him.jpg"
-                                     style="left: 0; background-image: url(http://verothemes.com/wedding/html/&quot;images/fashion_couple/about_him.jpg&quot;);">
-                                    <a href="02_04_about_him.html" class="btn btn_new btn_popup">About Him</a>
-                                    <h6 class="wed_name_left">Mark<br><span>Holts</span></h6>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Item -->
-                        <div class="col-md-5 col-sm-5 col-xs-12 col-sm-offset-1">
-                            <div class="wed_wrapper_frame">
-                                <div class="wed_heart_img_2 skrollable skrollable-after" data-bottom="right:10%"
-                                     data-center="right:0" data-image="images/fashion_couple/about_her_frame.jpg"
-                                     style="right: 0px; background-image: url(http://verothemes.com/wedding/html/&quot;images/fashion_couple/about_her_frame.jpg&quot;);">
-                                    <a href="02_05_about_her.html" class="btn btn_new btn_popup">About Her</a>
-                                    <h6 class="wed_name_right">Sally<br><span>Craft</span></h6>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!-- row end -->
                 </div>
-                <!-- END of CONTAINER -->
-
-            </section>
+                <div class="row">
+                    <div class="col col-lg-10 col-lg-offset-1">
+                        <div class="story-block">
+                            <ul>
+                                <li>
+                                    <div class="details">
+                                        <h3>First meet</h3>
+                                        <span class="date">25 Dec 2018</span>
+                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                    </div>
+                                    <div class="img-holder">
+                                        <img src="{% static 'images/people/friend_1.jpg' %}" alt>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-holder">
+                                        <img src="{% static 'images/roma.jpg' %}" alt>
+                                    </div>
+                                    <div class="details">
+                                        <h3>First date</h3>
+                                        <span class="date">25 Dec 2018</span>
+                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="details">
+                                        <h3>Proposal</h3>
+                                        <span class="date">25 Dec 2018</span>
+                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                    </div>
+                                    <div class="img-holder">
+                                        <img src="{% static 'images/people/friend_3.jpg' %}" alt>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-holder">
+                                        <img src="{% static 'images/people/friend_4.jpg' %}" alt>
+                                    </div>
+                                    <div class="details">
+                                        <h3>Engagement</h3>
+                                        <span class="date">25 Dec 2018</span>
+                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- end container -->
+        </section>
+        <!-- end story-section -->
             <!-- Section end -->
         </div>
         <!-- BORDER END -->
@@ -96,7 +111,7 @@
                 <div class="container">
                     <div class="row wed_auto_height wed_middle_titles">
                         <div class="col-md-12 wed_image_bck wed_fixed text-center">
-                            <h2>No te lo pierdas!</h2>
+                            <h2>Nos vemos en Galicia!!</h2>
                         </div>
                         <!-- col end -->
                     </div>
@@ -116,11 +131,11 @@
             <div class="container">
                 <div class="row wed_auto_height wed_middle_titles">
                     <div class="col-md-12 wed_image_bck wed_fixed text-center">
-                        <h2> Vas a venir?</h2>
+                        <h2> ¿Te lo vas a perder?</h2>
                         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
                             quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor
                             fermentum, tincidunt metus. Etiam ut ultrices </p>
-                        <a href="confirmacion" class="btn btn_new">RSVP</a>
+                        <a href="confirmacion" class="btn btn_new">Confirmación</a>
                     </div>
                     <!-- col end -->
 
@@ -140,37 +155,21 @@
                 <div class="container-full">
 
                     <div class="row text-center">
-                        <!-- Item -->
-                        <div class="col-md-4 wed_nopadding">
-                            <div class="wed_wrapper">
-                                <img src="{% static 'images/buildings/hotel.jpg' %}" class="wed_fullwidth" alt="">
-                                <a href="02_01_gift_registry.html" class="btn btn_new btn_popup">Gift List</a>
-                            </div>
-                            <div class="wed_pad_txt">
-                                <h3>Gift Registry</h3>
-                                <span>Avenue Paducah 1285 7th street<br><br></span>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada
-                                    ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur
-                                    dolor fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non
-                                    hendrerit faucibus. Proin
-                            </div>
-
-                        </div>
 
                         <!-- Item -->
                         <div class="col-md-4 wed_nopadding">
                             <div class="wed_wrapper">
                                 <img src="{% static 'images/touza.jpg' %}" class="wed_fullwidth" alt="">
-                                <a href="01_06_location.html" class="btn btn_new btn_popup">Ubicación</a>
+                                <a href="ubicacion" class="btn btn_new btn_popup">Ubicación</a>
                             </div>
                             <div class="wed_pad_txt">
-                                <h3>Ubicación</h3>
+                                <h3><a href="ubicacion">Ubicación</a></h3>
                                 <span>Rúa dos Pazos, 119, 36360 Nigrán, Pontevedra<br><br></span>
                                 <p>
-                                    El Hotel Pazo da Touza, es parte del patrimonio arquitectónico gallego del siglo XVI y reformado posteriormente en el siglo XVIII,
-                                    cuenta con su propia torre, que da fé de su señorial carácter. La balconada y los jardines autóctonos con árboles centenarios y su
-                                    laberinto de boj, son también muestras de la arquitectura típica gallega conservada.
+                                    Tanto la ceremonia civil como el aperitivo y la cena que se servirán a continuación tendrán lugar
+                                en O Pazo da Touza, construcción del siglo XVI que format parte del patrimonio arquitectónico gallego.
+                                Se encuentra ubicado en el ayuntamiento de Nigrán.
+
                             </div>
                         </div>
                         <!-- Item -->
@@ -180,14 +179,26 @@
                                 <a href="alojamientos" class="btn btn_new btn_popup">Alojamiento</a>
                             </div>
                             <div class="wed_pad_txt">
-                                <h3>Alojamiento</h3>
+                                <h3><a href="alojamientos">Alojamiento</a></h3>
                                 <span>Pontevedra<br><br></span>
                                 <p>
                                     Ubicada a escasos 50 km del Pazo da Touza, Pontevedra es el sitio idoneo para hospedarse.
                                 El servicio de autobuses conectara el centro de la ciudad con el Pazo de manera regular.
                             </div>
                         </div>
+                        <!-- Item -->
+                        <div class="col-md-4 wed_nopadding">
+                            <div class="wed_wrapper">
+                                <img src="{% static 'images/road_trip.jpg' %}" class="wed_fullwidth" alt="">
+                                <a href="organizacion" class="btn btn_new btn_popup">Organízate</a>
+                            </div>
+                            <div class="wed_pad_txt">
+                                <h3><a href="organizacion">Cómo organizarte</a></h3>
+                                <p>
+                                    Aquí encontrarás información sobre cómo llegar a Galicia y cómo desplazarte una vez estés aquí.
+                            </div>
 
+                        </div>
                     </div>
                     <!-- Row End -->
                 </div>
