--- a/templates/ubicacion.html
+++ b/templates/ubicacion.html
@@ -6,23 +6,24 @@
 {% block content %}
 
     <!-- PAGE TITLE SMALL -->
-    <div class="wed_page_title wed_page_title_great wed_image_bck wed_fixed wed_wht_txt" data-stellar-background-ratio="0.2" data-image="{% static 'images/fashion_couple/slider1.jpg' %}">
+    <div class="wed_page_title wed_page_title_great wed_image_bck wed_fixed wed_wht_txt"
+         data-stellar-background-ratio="0.2" data-image="{% static 'images/fashion_couple/slider1.jpg' %}">
 
 
-      <!-- Over -->
-      <div class="wed_over" data-color="#8630fc" data-opacity="0.9"></div>
-      <div class="wed_over" data-color="#000" data-opacity="0.1"></div>
+        <!-- Over -->
+        <div class="wed_over" data-color="#8630fc" data-opacity="0.9"></div>
+        <div class="wed_over" data-color="#000" data-opacity="0.1"></div>
 
-      <div class="container text-left">
-        <div class="row">
-          
-          <div class="col-md-8">
-            <h1 class="wed_h1_title">Ubicación</h1>
-            <h3>Pazo da Touza</h3>
-          </div>
+        <div class="container text-left">
+            <div class="row">
 
+                <div class="col-md-8">
+                    <h1 class="wed_h1_title">Ubicación</h1>
+                    <h3>Pazo da Touza</h3>
+                </div>
+
+            </div>
         </div>
-      </div>
     </div>
 
     <!-- PAGE TITLE SMALL END-->
@@ -31,93 +32,101 @@
     <section id="wed_content" class="wed_content">
 
         <section class="wed_section_inner">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 wed_event_hours">
-                <h3>Horarios:</h3>
-                <i>Preboda</i>
-                <b>21.08.2020 20:00</b><br>
-                <i>Ceremonia Civil</i>
-                <b>22.08.2020 18:00</b><br>
-                <i>Aperitivos</i>
-                <b>19.00</b><br>
-                <i>Cena</i>
-                <b>21.00</b><br>
-                <i>Fiesta</i>
-                <b>00.00</b><br>
-              </div>  
-              <div class="col-md-6 hidden-sm hidden-xs">
-                <img src="{% static 'images/fashion_couple/shutterstock_151862165.jpg' %}" alt="">
-              </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 wed_event_hours">
+                        <h3>Hoja de ruta</h3>
+                        <i>Ceremonia Civil</i>
+                        <b>18:00</b><br>
+                        <i>Aperitivos</i>
+                        <b>19.00</b><br>
+                        <i>Cena</i>
+                        <b>21.00</b><br>
+                        <i>Fiesta</i>
+                        <b>00.00</b><br>
+                    </div>
+                    <div class="col-md-8 hidden-sm hidden-xs mt-5 schedule_image">
+                        <img src="{% static 'images/touza3.jpg' %}" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
             </div>
-            <!-- Row End -->
-          </div>
-          <!-- Container End -->
+            <!-- Container End -->
         </section>
-      <!-- section -->
-      <section class="wed_section_innerpage">
-        <div class="containter">
-          <div class="row wed_inside_map">
-            <div class="col-md-12">
+        <!-- section -->
+        <section class="wed_section_innerpage">
+            <div class="containter">
+                <div class="row wed_inside_map">
+                    <div class="col-md-12">
 
+                        <!-- over -->
 
-              <!-- over -->
+                        <!-- map -->
+                        <div id="map" class="wed_map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2958.279347052685!2d-8.776163384176527!3d42.14430867920191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd258b8c4c237e45%3A0xced2230be29fc772!2sPazo%20Da%20Touza!5e0!3m2!1ses!2ses!4v1580141465319!5m2!1ses!2ses"
+                                    width="600" height="450" frameborder="0" style="border:0;"
+                                    allowfullscreen=""></iframe>
+                        </div>
+                        <!-- map end -->
 
-                <!-- map -->
-                <div id="map" class="wed_map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2958.279347052685!2d-8.776163384176527!3d42.14430867920191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd258b8c4c237e45%3A0xced2230be29fc772!2sPazo%20Da%20Touza!5e0!3m2!1ses!2ses!4v1580141465319!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>                </div>
-                <!-- map end -->
-
-            </div> 
-          </div> 
-        </div>
-      <!-- container end -->
-        <div class="container-full">
-
-          <div class="row text-center">
-            <!-- Item -->
-            <div class="col-md-4 wed_nopadding">
-              <img src="{% static 'images/buildings/hotel.jpg' %}" class="wed_fullwidth" alt="">
-              <div class="wed_pad_txt">
-                <h3>Hotel</h3>
-                <span>Avenue Paducah 1285 7th street<br><br></span>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin 
-              </div>
-                    
+                    </div>
+                </div>
             </div>
+            <!-- container end -->
+            <div class="wed_white_inner_border">
 
-            <!-- Item -->
-            <div class="col-md-4 wed_nopadding">
-              <img src="{% static 'images/buildings/restaurant.jpg' %}" class="wed_fullwidth" alt="">
-              <div class="wed_pad_txt">
-                  <h3>Restaurant</h3>
-                  <span>Avenue Paducah 1285 7th street<br><br></span>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin 
-              </div>   
-              </div>
-               <!-- Item -->
-              <div class="col-md-4 wed_nopadding">
-                <img src="{% static 'images/buildings/church.jpg' %}" class="wed_fullwidth" alt="">
-                <div class="wed_pad_txt">
-                  <h3>Church</h3>
-                  <span>Avenue Paducah 1285 7th street<br><br></span>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum, tincidunt metus. Etiam ut ultrices nibh.  Etiam aliquam mauris non hendrerit faucibus. Proin 
-                </div>    
-              </div>
+                <div class="container-full">
 
-          </div>
-          <!-- Row End -->
-        </div>
-        <!-- container end -->
+                    <div class="row text-center">
+
+                        <!-- Item -->
+                        <div class="col-md-4 wed_nopadding">
+                            <img src="{% static 'images/touza4.jpg' %}" class="wed_fullwidth" alt="">
+                            <div class="wed_pad_txt">
+                                <h3>Ceremonia Civil</h3>
+                                <span>Pazo da Touza<br><br></span>
+                                <p>
+                                    Tendrá lugar en el Pazo da Touza y comenzará a las 6 de la tarde. Habrá un servicio
+                                de autobuses que os llevará directamente desde Pontevedra  a la ceremonia. Si deseas llevar tu propio coche
+                                dispondrás de parking privado dentro del pazo.
+                            </div>
+                        </div>
+                        <!-- Item -->
+                        <div class="col-md-4 wed_nopadding">
+                            <img src="{% static 'images/touza5.jpg' %}" class="wed_fullwidth" alt="">
+                            <div class="wed_pad_txt">
+                                <h3>Aperitivos y cena</h3>
+                                <span>Pazo da Touza<br><br></span>
+                                <p>
+                                    A continuación se servirá un cóctel en los jardines y una cena en el salón interior.
+                                    No olvides contarnos si tienes alguna alergia o intolerancia.
+                            </div>
+                        </div>
+
+                         <!-- Item -->
+                        <div class="col-md-4 wed_nopadding">
+                            <img src="{% static 'images/fiesta.jpg' %}" class="wed_fullwidth" alt="">
+                            <div class="wed_pad_txt">
+                                <h3>Baile</h3>
+                                <span>Pazo da Touza<br><br></span>
+                                <p>
+                                    Una vez finalizada la cena, tendrá lugar el baile y la barra libre. Habrá un servicio
+                                de autobuses que conectará el pazo con Pontevedra.
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!-- Row End -->
+                </div>
+            </div>
+            <!-- container end -->
+        </section>
+        <!-- section end -->
+
     </section>
     <!-- section end -->
 
-  </section>
-  <!-- section end -->
-  
 
 
 {% endblock %}
